--- a/src/components/pages/coursestudy/courseStudy.css
+++ b/src/components/pages/coursestudy/courseStudy.css
@@ -8,17 +8,17 @@
 
     h2{
         font-size: 24px;
-        color: #8a4baf;
+        color: #8abf8a;
         text-align: center;
     }
     h4{
         font-size: 21px;
-        color: #8a4baf;
+        color: #8abf8a;
         text-align: center;
     }
     h5{
         font-size: 20px;
-        color: #8a4baf;
+        color: #8abf8a;
         text-align: center;
     }
     a{
