--- a/src/components/Loading/loading.css
+++ b/src/components/Loading/loading.css
@@ -1,25 +1,39 @@
-.loading-page{
+.loading-page {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+    height: 100vh;
+    background-color: #f9f9f9;
+    font-family: 'Arial', sans-serif;
+    color: #333;
+}
 
-    .loader{
-        border: 5px solid #f3f3f3;
-        border-top: 5px solid #8a4baf;
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        animation: spin 2s linear infinite;
+.loader {
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #8abf8a;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
 
+.loading-text {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.loading-text p {
+    font-size: 1.2rem;
+    margin: 5px;
+    color: #8abf8a;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
     }
-
-    @keyframes spin {
-        0%{
-            transform : rotate(0deg);
-        }
-        100%{
-            transform: rotate(360deg);
-        }
+    100% {
+        transform: rotate(360deg);
     }
 }
