--- a/src/components/admin/Dashboard/dashboard.css
+++ b/src/components/admin/Dashboard/dashboard.css
@@ -6,7 +6,7 @@
 
     .box{
         margin-left: 20px;
-        background-color: #8a4baf;
+        background-color: #8abf8a;
         padding: 5px;
         border-radius: 5px;
         align-items: center;
@@ -15,7 +15,7 @@
     
 
         &:hover{
-            background-color: #432456;
+            background-color: #4b7e5f;
         }
     }
 }
