--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 footer{
-    background-color: #8a5baf;
+    background-color: #8abf8a ;
     color:white;
     padding : 20px 0;
     text-align: center;
