--- a/src/components/pages/about/about.css
+++ b/src/components/pages/about/about.css
@@ -9,7 +9,7 @@
 
         h2{
             font-size: 32px;
-            color: #8a4baf;
+            color: #8abf8a;
             margin-bottom: 20px;
         }
         
