--- a/src/components/pages/auth/auth.css
+++ b/src/components/pages/auth/auth.css
@@ -15,7 +15,7 @@
 
         h2{
             font-size: 24px;
-            color: #8a4baf;
+            color: #8abf8a;
             margin-bottom: 15px;
         }
 
