--- a/src/components/pages/paymentsuccess/paymentSuccess.css
+++ b/src/components/pages/paymentsuccess/paymentSuccess.css
@@ -17,12 +17,12 @@
 
     h2{
         font-size: 24px;
-        color: #8a4baf;
+        color: #8abf8a;
         margin-bottom: 15px;
     }
     p{
         font-size: 16px;
-        color: #8a4baf;
+        color: #8abf8a;
         margin-bottom: 20px;
     }
     a{
