--- a/src/components/testimonials/testimonial.css
+++ b/src/components/testimonials/testimonial.css
@@ -4,7 +4,7 @@
 
     h2{
         font-size: 32px;
-        color: #8a4baf;
+        color: #8abf8a ;
         margin-bottom:30px;
     }
 
@@ -54,7 +54,7 @@
             .name{
                 font-size: 18px;
                 font-weight: bold;
-                color: #8a4baf;
+                color: #8abf8a ;
                 margin-bottom: 5px;
             }
 
