--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body{
 }
 
 .common-btn{
-  background-color: #8abf8a;
+  background-color: #335C89;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -17,7 +17,7 @@ body{
   margin-top: 10px;
 
   &:hover{
-    background-color: #4b7e5f      ;
+    background-color: #357ABD;
   }
 
   @media (max-width:768px) {
