--- a/src/components/Loading/loading.css
+++ b/src/components/Loading/loading.css
@@ -11,7 +11,7 @@
 
 .loader {
     border: 5px solid #f3f3f3;
-    border-top: 5px solid #8abf8a;
+    border-top: 5px solid #335C89;
     border-radius: 50%;
     width: 50px;
     height: 50px;
@@ -26,7 +26,7 @@
 .loading-text p {
     font-size: 1.2rem;
     margin: 5px;
-    color: #8abf8a;
+    color: #335C89;
 }
 
 @keyframes spin {
