--- a/src/components/pages/auth/auth.css
+++ b/src/components/pages/auth/auth.css
@@ -1,41 +1,77 @@
-.auth-page{
+.auth-page {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 80vh;
+    min-height: 100vh;
+     background: linear-gradient(135deg, rgba(135, 184, 255, 0.1), rgba(85, 125, 185, 0.1));
+
+    padding: 30px;
+  }
+  
+  .auth-form {
     background-color: #fff;
-
-    .auth-form{
-        background-color: #fff;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
-        text-align: center;
-        width: 300px;
-
-        h2{
-            font-size: 24px;
-            color: #8abf8a;
-            margin-bottom: 15px;
-        }
-
-        form {
-            text-align: left;
-
-            label{
-                display: block;
-                margin-bottom: 5px;
-                font-size: 14px;
-                color: #333;
-            }
-
-            input{
-                width:92%;
-                padding: 10px;
-                margin-bottom: 15px;
-                border: 1px solid #ccc;
-                border-radius: 5px;
-            }
-        }
-    }
-}
+    padding: 30px;
+    border-radius: 15px; /* More rounded corners */
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 100%;
+    max-width: 400px;
+  }
+  
+  .auth-form h2 {
+    font-size: 28px;
+    color: #2575fc;
+    margin-bottom: 15px;
+  }
+  
+  .auth-form p {
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 20px;
+  }
+  
+  .auth-form label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 14px;
+    color: #333;
+  }
+  
+  .auth-form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  .common-btn {
+    width: 100%;
+    padding: 12px;
+    background-color: #2575fc;
+    color: #fff;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .common-btn:hover {
+    background-color: #1a5cb1;
+  }
+  
+  .redirect {
+    font-size: 14px;
+    color: #555;
+  }
+  
+  .redirect a {
+    color: #2575fc;
+    text-decoration: none;
+  }
+  
+  .redirect a:hover {
+    text-decoration: underline;
+  }
+  
